<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="face">Face</string>
    <string name="body">Body</string>
    <string name="suntan">Suntan</string>
    <string name="mask">Mask</string>
    <string name="catalog">Catalog</string>
    <string name="see_all">See all</string>
    <string name="filters">Filters</string>
    <string name="by_popularity">By popularity</string>
    <string name="star">★</string>
    <string name="discount_placeholder">-%1$s%%</string>
    <string name="plus">+</string>
    <string name="by_price_reduction">By price reduction</string>
    <string name="on_price_increases">On price increases</string>
    <string name="product_images">Product images</string>
    <string name="buy_button">Buy button</string>
    <string name="favorite_button">Favorite button</string>
</resources>